--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "format": "npx standard --fix | echo 'Fixed Everything I could.'",
-    "compile": "npx babel src --out-dir dist",
-    "dev": "concurrently 'npm run compile -- --watch' 'npm run dev:server'",
-    "dev:server": "nodemon --exec 'npx ftrouter -d dist/routes'",
-    "start": "npx ftrouter -d dist/routes"
+    "build": "npx babel src --out-dir dist",
+    "dev:server": "nodemon --exec babel-node src/server.js",
+    "dev": "concurrently 'npm run dev:server'",
+    "start": "node dist/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ftrouter": "barelyhuman/ftrouter#0.0.2-dev.2",
     "knex": "^0.21.6",
     "pg": "^8.3.3"
@@ -18,9 +19,11 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "concurrently": "^5.2.0",
     "husky": ">=4",
     "lint-staged": ">=10",
