context middleware, babel runtime additions
adds babel runtime changes to avoid conversions of async to generators

also added context middleware for handler bootstrapping

--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,31 @@
     [
       "module-resolver",
       {
-        "root": ["./"]
+        "root": ["./src"]
+      }
+    ],
+    [
+      "@babel/plugin-transform-regenerator",
+      {
+        "async": false
+      }
+    ],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "helpers": false,
+        "regenerator": true
       }
     ]
   ],
-  "presets": [["@babel/preset-env"]]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ]
 }
