--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -29,6 +30,7 @@
     "lint-staged": ">=10",
     "nodemon": "^2.0.4"
   },
+  "browserslist": "> 0.25%, not dead",
   "lint-staged": {
     "*": "npm run format"
   },
