--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@ SOURCE_URL=
 
 ## mail server url , can get one from http://mailer.reaper.im/
 MAILER_URL=
+
+## JSON WEB TOKEN signing secret
+JWT_SECRET=
