--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "body-parser": "^1.19.0",
     "ftrouter": "barelyhuman/ftrouter#0.0.2-dev.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
     "pg": "^8.3.3"
   },
